updated return customer route and document, and removed token auth
